[workspace]
members = [
    "kernel",
    "runtime",
    "comms",
    "examples/kernel_example",
    "examples/runtime_example",
    "examples/comms_example",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AstraOS Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/astraos/astraos"
homepage = "https://astraos.dev"
documentation = "https://docs.astraos.dev"
keywords = ["robotics", "os", "real-time", "distributed", "rust"]
categories = ["embedded", "robotics", "operating-systems"]
rust-version = "1.70"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
dashmap = "5.4"
crossbeam = "0.8"
once_cell = "1.19"
parking_lot = "0.12"
smallvec = "1.11"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
toml = "0.8"
thiserror = "1.0"

priority-queue = "1.4"
pin-project-lite = "0.2"