[package]
name = "astraos-comms"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }

# Optional features for different transport layers
futures = "0.3"
bincode = "1.3"
bytes = "1.6"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1" }

[features]
default = ["tcp", "udp"]
tcp = []
udp = []
websocket = []
memory = []