[package]
name = "scheduler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
astraos-runtime = { path = "../runtime" }
tokio = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
crossbeam = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
smallvec = { workspace = true }
priority-queue = { workspace = true }
futures = { workspace = true }
pin-project-lite = { workspace = true }

[features]
default = []
realtime = []
static-priority = []
dynamic-priority = []
multi-core = []