[package]
name = "kernel_example"
version = "0.1.0"
edition = "2021"
authors = ["AstraOS Team"]
description = "Example application demonstrating AstraOS kernel features"
license = "MIT OR Apache-2.0"
repository = "https://github.com/astraos/astraos"
homepage = "https://astraos.dev"

[dependencies]
astraos_kernel = { package = "astraos-kernel", path = "../../kernel" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[[bin]]
name = "kernel_example"
path = "src/main.rs"